<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.FirstFragment">

    <TextView
        android:id="@+id/fragment_first_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"


        android:text="@string/fragment_first_text_view_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_first_edit_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:hint="@string/fragment_first_egit_text_hint1"
        app:layout_constraintStart_toStartOf="@+id/fragment_first_text_view1"
        app:layout_constraintTop_toBottomOf="@+id/fragment_first_text_view1" />

    <TextView
        android:id="@+id/fragment_first_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_first_text_view_2_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment_first_edit_text2"
        app:layout_constraintEnd_toEndOf="@+id/fragment_first_edit_text2" />

    <EditText
        android:id="@+id/fragment_first_edit_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="309dp"
        android:hint="@string/fragment_first_egit_text_hint2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_first_button_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment_first_text_view2"
        app:layout_constraintStart_toStartOf="@+id/fragment_first_text_view2" />


</androidx.constraintlayout.widget.ConstraintLayout>