<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainFragment">


    <Button
        android:id="@+id/fragment_main_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_main_button_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/fragment_main_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_main_button_text2"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_button1"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_button1" />

    <Button
        android:id="@+id/fragment_main_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_main_button_text3"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_button4"
        app:layout_constraintStart_toStartOf="@+id/fragment_main_button4" />

    <Button
        android:id="@+id/fragment_main_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_main_button_text4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>