<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/third_fragment_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/third_fragment_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/third_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="14dp"
        android:text="@string/fragment_third_button_text"
        app:layout_constraintBottom_toTopOf="@+id/third_fragment_button2"
        app:layout_constraintStart_toStartOf="@+id/third_fragment_button2"
        android:backgroundTint="#ff69b4"/>

    <Button
        android:id="@+id/third_fragment_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="@string/fragment_third_button_to_main_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#ff69b4"/>

    <Button
        android:id="@+id/third_fragment_button_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginBottom="18dp"
        android:text="@string/fragment_third_button_clean_text"
        app:layout_constraintBottom_toTopOf="@+id/third_fragment_button"
        app:layout_constraintStart_toStartOf="@+id/third_fragment_button"
        android:backgroundTint="#ff69b4"/>


</androidx.constraintlayout.widget.ConstraintLayout>